add: small contents

--- a/Day37 HTML/marksheet.html
+++ b/Day37 HTML/marksheet.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark Sheet</title>
 </head>
 <body>
     <div>
         <div>
             <h1>Space University</h1>
-            <p>123, Filler Street, South India</p>
+            <p>147,Captain Miller Street, South India</p>
         </div>
 
         <div>
@@ -18,8 +15,8 @@
             <p>Date: 01 June 2024</p>
         </div>
 
-        <table border="1" cellspacing="0" cellpadding="5">
-            <tr>
+        <table border="1" >
+           <tr>
                 <th>Subject Code</th>
                 <th>Subject Title</th>
                 <th>Maximum Marks</th>
