--- a/Day37 HTML/resume.html
+++ b/Day37 HTML/resume.html
@@ -14,7 +14,7 @@
 
         <div>
             <h2>Profile</h2>
-            <p>Experienced software developer with a strong background in developing award-winning strategies for a diverse clientele. Adept at understanding client needs and delivering innovative solutions. Committed to staying updated with the latest technologies and trends.</p>
+            <p>Experienced software developer with a strong background in developing .Net and Spring</p>
         </div>
 
         <div>
@@ -23,12 +23,16 @@
                 <li>
                     <h3>Senior Software Engineer, ABC Corp</h3>
                     <p>Jan 2020 - Present</p>
-                    <p>Led a team of developers to create cutting-edge web applications. Improved code quality by implementing best practices and conducting regular code reviews.</p>
+                    <p>Led team of devs, single handedly maintaining our mainframe with all the infra and devs</p>
                 </li>
                 <li>
-                    <h3>Software Developer, XYZ Inc.</h3>
+                    <h3>Software Developer, CBA Inc.</h3>
                     <p>Jun 2015 - Dec 2019</p>
-                    <p>Developed and maintained web applications, collaborated with cross-functional teams to define project requirements, and contributed to the full software development lifecycle.</p>
+                    <p>Developed and implemented critical features for the notifications, core modules, and front end, enhancing the functionality and efficiency of the platform.
+Worked in microservices with Go, Ruby, and Java.
+collaborated with the team on multiple successful projects.
+Completely set environment for new service in Azure AKS and AWS EB</p>
+
                 </li>
             </ul>
         </div>
@@ -38,7 +42,7 @@
             <ul>
                 <li>
                     <h3>Bachelor of Science in Computer Science</h3>
-                    <p>University of Somewhere, 2011 - 2015</p>
+                    <p>University of TamilNadu, 2011 - 2015</p>
                 </li>
             </ul>
         </div>
@@ -46,11 +50,11 @@
         <div>
             <h2>Skills</h2>
             <ul>
-                <li>JavaScript</li>
-                <li>Python</li>
-                <li>HTML/CSS</li>
-                <li>React</li>
-                <li>Node.js</li>
+                <li>.Net</li>
+                <li>Spring</li>
+                <li>Express</li>
+                <li>Go</li>
+                <li>Rust</li>
                 <li>SQL</li>
             </ul>
         </div>
