--- a/4_6_2024 Protfolio/Portfolio.html
+++ b/4_6_2024 Protfolio/Portfolio.html
@@ -9,11 +9,15 @@
             padding: 0;
             background-color: #f4f4f4;
         }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 20px;
+        }
         .center {
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width: 50%;
         }
         h1, h2, h3 {
             color: #333;
@@ -24,17 +28,48 @@
         a {
             color: #3498db;
         }
+        @media (max-width: 768px) {
+            .container {
+                padding: 10px;
+            }
+            h1 {
+                font-size: 24px;
+            }
+            h2 {
+                font-size: 20px;
+            }
+            h3 {
+                font-size: 18px;
+            }
+            p, li {
+                font-size: 16px;
+            }
+        }
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 20px;
+            }
+            h2 {
+                font-size: 18px;
+            }
+            h3 {
+                font-size: 16px;
+            }
+            p, li {
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="center">
+    <div class="container">
         <h1>Sugavanesh Murugesan</h1>
         <h2>Software Engineer</h2>
         <p>Location: Coimbatore, Tamil Nadu</p>
         <p>Email: sugankpms@gmail.com</p>
         <p>GitHub: <a href="https://github.com/sugan0tech">sugan0tech</a></p>
         <p>LinkedIn: <a href="https://linkedin.com/in/sugan0tech">sugan0tech</a></p>
-        <img src="profile.jpg" alt="Profile Image" class="center" height="400">
+        <img src="profile.jpg" alt="Profile Image" class="center" height="400" width="400">
         <h2>Education</h2>
         <h3>SRI KRISHNA COLLEGE OF ENGINEERING AND TECHNOLOGY</h3>
         <p>Location: Coimbatore, India</p>
