init: today taks (responsive designs)

--- a/6_6_2024 Bootstarp/List.html
+++ b/6_6_2024 Bootstarp/List.html
@@ -12,11 +12,12 @@
             font-family: Arial, sans-serif;
         }
         .table-wrapper {
-            margin: 20px;
+            margin: 20px auto;
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
+            max-width: 1200px;
         }
         .status-open {
             color: #007bff;
@@ -36,12 +37,47 @@
         .text-green {
             color: #28a745;
         }
+        /* Custom styles for responsive adjustments */
+        @media (max-width: 767px) {
+            .table-wrapper {
+                margin: 10px;
+                padding: 15px;
+            }
+            h2 {
+                font-size: 1.5rem;
+            }
+            .btn {
+                font-size: 0.9rem;
+            }
+            .table thead {
+                display: none;
+            }
+            .table tr {
+                display: block;
+                margin-bottom: 15px;
+            }
+            .table td {
+                display: block;
+                text-align: right;
+                padding-left: 50%;
+                position: relative;
+            }
+            .table td::before {
+                content: attr(data-label);
+                position: absolute;
+                left: 0;
+                width: 45%;
+                padding-left: 15px;
+                font-weight: bold;
+                text-align: left;
+            }
+        }
     </style>
 </head>
 <body>
 
-    <div class="container table-wrapper">
-        <div class="d-flex justify-content-between mb-3">
+    <div class="container-fluid table-wrapper">
+        <div class="d-flex justify-content-between align-items-center mb-3">
             <h2>Customers</h2>
             <button class="btn btn-primary">+ Add customer</button>
         </div>
@@ -60,85 +96,85 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>1</td>
-                        <td>Ann Culhane<br><small>5684236526</small></td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
-                        <td><span class="badge badge-primary status-open">Open</span></td>
-                        <td>$70.00 CAD</td>
-                        <td class="text-red">-$270.00</td>
-                        <td>$500.00</td>
+                        <td data-label="#">1</td>
+                        <td data-label="Name">Ann Culhane<br><small>5684236526</small></td>
+                        <td data-label="Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
+                        <td data-label="Status"><span class="badge badge-primary status-open">Open</span></td>
+                        <td data-label="Rate">$70.00 CAD</td>
+                        <td data-label="Balance" class="text-red">-$270.00</td>
+                        <td data-label="Deposit">$500.00</td>
                     </tr>
                     <tr>
-                        <td>2</td>
-                        <td>Ahmad Rosser<br><small>5684236527</small></td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
-                        <td><span class="badge badge-success status-paid">Paid</span></td>
-                        <td>$70.00 CAD</td>
-                        <td class="text-green">$270.00</td>
-                        <td>$500.00</td>
+                        <td data-label="#">2</td>
+                        <td data-label="Name">Ahmad Rosser<br><small>5684236527</small></td>
+                        <td data-label="Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
+                        <td data-label="Status"><span class="badge badge-success status-paid">Paid</span></td>
+                        <td data-label="Rate">$70.00 CAD</td>
+                        <td data-label="Balance" class="text-green">$270.00</td>
+                        <td data-label="Deposit">$500.00</td>
                     </tr>
                     <tr>
-                        <td>3</td>
-                        <td>Zain Calzoni<br><small>5684236528</small></td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
-                        <td><span class="badge badge-primary status-open">Open</span></td>
-                        <td>$70.00 CAD</td>
-                        <td class="text-red">-$20.00</td>
-                        <td>$500.00</td>
+                        <td data-label="#">3</td>
+                        <td data-label="Name">Zain Calzoni<br><small>5684236528</small></td>
+                        <td data-label="Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
+                        <td data-label="Status"><span class="badge badge-primary status-open">Open</span></td>
+                        <td data-label="Rate">$70.00 CAD</td>
+                        <td data-label="Balance" class="text-red">-$20.00</td>
+                        <td data-label="Deposit">$500.00</td>
                     </tr>
                     <tr>
-                        <td>4</td>
-                        <td>Leo Stanton<br><small>5684236529</small></td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
-                        <td><span class="badge badge-secondary status-inactive">Inactive</span></td>
-                        <td>$70.00 CAD</td>
-                        <td class="text-green">$600.00</td>
-                        <td>$500.00</td>
+                        <td data-label="#">4</td>
+                        <td data-label="Name">Leo Stanton<br><small>5684236529</small></td>
+                        <td data-label="Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
+                        <td data-label="Status"><span class="badge badge-secondary status-inactive">Inactive</span></td>
+                        <td data-label="Rate">$70.00 CAD</td>
+                        <td data-label="Balance" class="text-green">$600.00</td>
+                        <td data-label="Deposit">$500.00</td>
                     </tr>
                     <tr>
-                        <td>5</td>
-                        <td>Kaiya Vetrov<br><small>5684236530</small></td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
-                        <td><span class="badge badge-primary status-open">Open</span></td>
-                        <td>$70.00 CAD</td>
-                        <td class="text-red">-$350.00</td>
-                        <td>$500.00</td>
+                        <td data-label="#">5</td>
+                        <td data-label="Name">Kaiya Vetrov<br><small>5684236530</small></td>
+                        <td data-label="Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
+                        <td data-label="Status"><span class="badge badge-primary status-open">Open</span></td>
+                        <td data-label="Rate">$70.00 CAD</td>
+                        <td data-label="Balance" class="text-red">-$350.00</td>
+                        <td data-label="Deposit">$500.00</td>
                     </tr>
                     <tr>
-                        <td>6</td>
-                        <td>Ryan Westervelt<br><small>5684236531</small></td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
-                        <td><span class="badge badge-success status-paid">Paid</span></td>
-                        <td>$70.00 CAD</td>
-                        <td class="text-red">-$270.00</td>
-                        <td>$500.00</td>
+                        <td data-label="#">6</td>
+                        <td data-label="Name">Ryan Westervelt<br><small>5684236531</small></td>
+                        <td data-label="Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
+                        <td data-label="Status"><span class="badge badge-success status-paid">Paid</span></td>
+                        <td data-label="Rate">$70.00 CAD</td>
+                        <td data-label="Balance" class="text-red">-$270.00</td>
+                        <td data-label="Deposit">$500.00</td>
                     </tr>
                     <tr>
-                        <td>7</td>
-                        <td>Corey Stanton<br><small>5684236532</small></td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
-                        <td><span class="badge badge-danger status-due">Due</span></td>
-                        <td>$70.00 CAD</td>
-                        <td class="text-green">$30.00</td>
-                        <td>$500.00</td>
+                        <td data-label="#">7</td>
+                        <td data-label="Name">Corey Stanton<br><small>5684236532</small></td>
+                        <td data-label="Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
+                        <td data-label="Status"><span class="badge badge-danger status-due">Due</span></td>
+                        <td data-label="Rate">$70.00 CAD</td>
+                        <td data-label="Balance" class="text-green">$30.00</td>
+                        <td data-label="Deposit">$500.00</td>
                     </tr>
                     <tr>
-                        <td>8</td>
-                        <td>Adison Aminoff<br><small>5684236533</small></td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
-                        <td><span class="badge badge-primary status-open">Open</span></td>
-                        <td>$70.00 CAD</td>
-                        <td class="text-red">-$270.00</td>
-                        <td>$500.00</td>
+                        <td data-label="#">8</td>
+                        <td data-label="Name">Adison Aminoff<br><small>5684236533</small></td>
+                        <td data-label="Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
+                        <td data-label="Status"><span class="badge badge-primary status-open">Open</span></td>
+                        <td data-label="Rate">$70.00 CAD</td>
+                        <td data-label="Balance" class="text-red">-$270.00</td>
+                        <td data-label="Deposit">$500.00</td>
                     </tr>
                     <tr>
-                        <td>9</td>
-                        <td>Alfredo Aminoff<br><small>5684236534</small></td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
-                        <td><span class="badge badge-secondary status-inactive">Inactive</span></td>
-                        <td>$70.00 CAD</td>
-                        <td class="text-green">$460.00</td>
-                        <td>$500.00</td>
+                        <td data-label="#">9</td>
+                        <td data-label="Name">Alfredo Aminoff<br><small>5684236534</small></td>
+                        <td data-label="Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla...</td>
+                        <td data-label="Status"><span class="badge badge-secondary status-inactive">Inactive</span></td>
+                        <td data-label="Rate">$70.00 CAD</td>
+                        <td data-label="Balance" class="text-green">$460.00</td>
+                        <td data-label="Deposit">$500.00</td>
                     </tr>
                 </tbody>
             </table>
@@ -149,9 +185,5 @@
         </div>
     </div>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
