--- a/6_6_2024 Bootstarp/Email.html
+++ b/6_6_2024 Bootstarp/Email.html
@@ -3,161 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email List View</title>
+    <title>App Introduction</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #f5f5f5;
+            background-color: #f8f9fa;
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
         }
-        .email-list-container {
-            margin: 20px;
+        .intro-section {
+            padding: 60px 20px;
+            background: linear-gradient(to bottom right, #f8f9fa 50%, #007bff 50%);
+            color: #343a40;
         }
-        .email-item {
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            margin-bottom: 10px;
-            padding: 10px;
-            display: flex;
-            align-items: center;
+        .intro-title {
+            font-size: 2.5rem;
+            font-weight: bold;
+            color: #343a40;
         }
-        .email-item:hover {
-            background-color: #f1f1f1;
+        .intro-description {
+            font-size: 1.2rem;
+            color: #343a40;
+            margin-top: 20px;
         }
-        .email-item img {
-            border-radius: 50%;
-            margin-right: 10px;
+        .feature-list {
+            font-size: 1.2rem;
+            color: #343a40;
+            list-style-type: none;
+            padding: 0;
+            margin-top: 20px;
         }
-        .email-details {
-            flex-grow: 1;
+        .feature-list li {
+            padding: 5px 0;
+            font-weight: bold;
         }
-        .email-timestamp, .email-status {
-            font-size: 0.8em;
+        .feature-list li::before {
+            content: "•";
+            color: #dc3545;
+            font-weight: bold;
+            display: inline-block;
+            width: 1em;
+            margin-left: -1em;
         }
-        .badge-new {
-            background-color: #007bff;
-            color: white;
+        .screenshot {
+            max-width: 100%;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
         }
-        .badge-promo {
-            background-color: #28a745;
-            color: white;
+        .screenshot {
+            max-width: 100%;
+            max-height: 500px;
+            width: auto;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+            object-fit: contain;
         }
-        .badge-secondary {
-            background-color: #6c757d;
-            color: white;
+        @media (max-width: 768px) {
+            .intro-title {
+                font-size: 2rem;
+            }
+            .intro-description, .feature-list {
+                font-size: 1rem;
+            }
         }
     </style>
 </head>
 <body>
 
-    <div class="container email-list-container">
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <button class="btn btn-outline-secondary" type="button">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-funnel" viewBox="0 0 16 16">
-                        <path d="M1.5 1.5a.5.5 0 0 1 .5-.5h12a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.146.354l-4.82 4.82v3.511a.5.5 0 0 1-.276.447l-3 1.5A.5.5 0 0 1 6 12.5v-5.825l-4.82-4.82A.5.5 0 0 1 1.5 2.5v-1z"/>
-                    </svg>
-                </button>
-            </div>
-            <input type="text" class="form-control" placeholder="Search in mail">
-            <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">
-                    <img src="profile-pic-url" alt="profile" width="24" height="24" class="rounded-circle">
-                </button>
-            </div>
-        </div>
-
-        <h5>Primary</h5>
-
-        <div class="email-item">
-            <img src="social-pic-url" alt="social" width="40" height="40">
-            <div class="email-details">
-                <div class="d-flex justify-content-between">
-                    <div><strong>Social</strong></div>
-                    <div class="email-status"><span class="badge badge-new">2 new</span></div>
+    <div class="container-fluid intro-section">
+        <div class="container">
+            <div class="row align-items-center">
+                <!-- Intro Text -->
+                <div class="col-md-6">
+                    <h1 class="intro-title">FREE Gmail UI</h1>
+                    <h2 class="intro-title">iPhone & Android Mockup 2024</h2>
+                    <p class="intro-description">
+                        Design template for the latest Gmail user interface on both iPhone and Android devices. Get a glimpse of the modern email experience with this free mockup.
+                    </p>
+                    <ul class="feature-list">
+                        <li>Android</li>
+                        <li>iPhone</li>
+                    </ul>
                 </div>
-                <div class="text-muted">Twitter, Twitter Message</div>
-            </div>
-        </div>
-
-        <div class="email-item">
-            <img src="promotions-pic-url" alt="promotions" width="40" height="40">
-            <div class="email-details">
-                <div class="d-flex justify-content-between">
-                    <div><strong>Promotions</strong></div>
-                    <div class="email-status"><span class="badge badge-promo">99+ new</span></div>
-                </div>
-                <div class="text-muted">Netflix New Arrivals, Bank</div>
-            </div>
-        </div>
-
-        <div class="email-item">
-            <img src="company-pic-url" alt="company" width="40" height="40">
-            <div class="email-details">
-                <div class="d-flex justify-content-between">
-                    <div><strong>Fortune Company co.</strong></div>
-                    <div class="email-timestamp">11:27 pm</div>
-                </div>
-                <div class="text-muted">Important Files!<br>Make sure you receive these.</div>
-                <div class="d-flex">
-                    <span class="badge badge-secondary mr-1">Pre-Order</span>
-                    <span class="badge badge-secondary mr-1">Image</span>
-                    <span class="badge badge-secondary">+3</span>
+                <div class="col-md-6 screenshot-container">
+                    <img src="screenshot1.png" class="screenshot" alt="Gmail UI on Android">
+                    <img src="screenshot1.png" class="screenshot" alt="Gmail UI on iPhone">
                 </div>
             </div>
         </div>
-
-        <div class="email-item">
-            <img src="stephanie-pic-url" alt="stephanie" width="40" height="40">
-            <div class="email-details">
-                <div class="d-flex justify-content-between">
-                    <div><strong>Stephanie Everhill</strong></div>
-                    <div class="email-timestamp">11:27 pm</div>
-                </div>
-                <div class="text-muted">When do we meet again?<br>I would meet at the Western Mall if you...</div>
-            </div>
-        </div>
-
-        <div class="email-item">
-            <img src="random-bank-pic-url" alt="random-bank" width="40" height="40">
-            <div class="email-details">
-                <div class="d-flex justify-content-between">
-                    <div><strong>Random Bank Online</strong></div>
-                    <div class="email-timestamp">June 19</div>
-                </div>
-                <div class="text-muted">Random Bank Account Balance Update<br>Time to check your bank information an...</div>
-            </div>
-        </div>
-
-        <div class="email-item">
-            <img src="taylor-pic-url" alt="taylor" width="40" height="40">
-            <div class="email-details">
-                <div class="d-flex justify-content-between">
-                    <div><strong>Taylor Grey</strong></div>
-                    <div class="email-timestamp">May 6</div>
-                </div>
-                <div class="text-muted">Timesheet nextweek?<br>Hey what was our timesheet that was for...</div>
-            </div>
-        </div>
-
-        <div class="email-item">
-            <img src="uniqueyou-pic-url" alt="uniqueyou" width="40" height="40">
-            <div class="email-details">
-                <div class="d-flex justify-content-between">
-                    <div><strong>UniqueYou by SecretKissShop</strong></div>
-                    <div class="email-timestamp">May 6</div>
-                </div>
-                <div class="text-muted">Learn new Tricks<br>Now is great time to shop great new fash...</div>
-            </div>
-        </div>
-
     </div>
-
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
