--- a/ProjectWeb/profiles.html
+++ b/ProjectWeb/profiles.html
@@ -23,53 +23,35 @@
                 </li>
             </ul>
         </div>
-        <a href="login.html" class="btn btn-outline-success">Login</a>
+        <button onclick="logout()" class="btn btn-outline-danger">Logout</button>
     </nav>
     <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-3">
-                <h5>Filter</h5>
-                <form>
-                    <div class="form-group">
-                        <label for="age">Age Range</label>
-                        <select class="form-control" id="age">
-                            <option>18-25</option>
-                            <option>26-35</option>
-                            <option>36-45</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="location">Location</label>
-                        <select class="form-control" id="location">
-                            <option>New York</option>
-                            <option>California</option>
-                            <option>Texas</option>
-                        </select>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Apply</button>
-                </form>
-            </div>
-            <div class="col-md-9">
-                <h3>Profiles</h3>
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">Profile 1</h5>
-                        <p class="card-text">Age: 29, Location: New York</p>
-                        <button class="btn btn-success">Match Request</button>
-                    </div>
+        <h2>Profiles</h2>
+        <a href="create-profile.html" class="btn btn-success mb-3">Create New Profile</a>
+        <div id="profilesList">
+            <!-- Example Profiles -->
+            <div class="card mb-3" data-profile-id="1">
+                <div class="card-body">
+                    <h5 class="card-title">Profile 1</h5>
+                    <p class="card-text">Age: 29, Location: New York</p>
+                    <p class="card-text">Education: Bachelors, Occupation: Engineer</p>
+                    <button class="btn btn-info" onclick="viewProfile(1)">View Profile</button>
+                    <button class="btn btn-warning" onclick="editProfile(1)">Edit Profile</button>
+                    <button class="btn btn-danger" onclick="removeProfile(1)">Remove Profile</button>
                 </div>
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">Profile 2</h5>
-                        <p class="card-text">Age: 32, Location: California</p>
-                        <button class="btn btn-success">Match Request</button>
-                    </div>
+            </div>
+            <div class="card mb-3" data-profile-id="2">
+                <div class="card-body">
+                    <h5 class="card-title">Profile 2</h5>
+                    <p class="card-text">Age: 32, Location: California</p>
+                    <p class="card-text">Education: Masters, Occupation: Doctor</p>
+                    <button class="btn btn-info" onclick="viewProfile(2)">View Profile</button>
+                    <button class="btn btn-warning" onclick="editProfile(2)">Edit Profile</button>
+                    <button class="btn btn-danger" onclick="removeProfile(2)">Remove Profile</button>
                 </div>
             </div>
         </div>
     </div>
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2024 MatrimonySite. All rights reserved.</p>
-    </footer>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
