--- a/19_6_2024 jqery adv/quote/quotes.html
+++ b/19_6_2024 jqery adv/quote/quotes.html
@@ -16,6 +16,11 @@
     </nav>
     <main>
         <h1>Quotes</h1>
+        <div class="controls">
+            <input type="text" id="searchInput" placeholder="Search quotes...">
+            <button id="sortAsc">Sort A-Z</button>
+            <button id="sortDesc">Sort Z-A</button>
+        </div>
         <div id="quotes-container"></div>
         <div class="pagination">
             <button id="prev" disabled>Previous</button>
@@ -25,3 +30,4 @@
     <script src="quotes.js"></script>
 </body>
 </html>
+
