--- a/20_6_2024/task/login.html
+++ b/20_6_2024/task/login.html
@@ -18,7 +18,6 @@
             <p id="login-message"></p>
         </form>
     </div>
-    <script src="login.js"></script>
+    <script src="./login.js"></script>
 </body>
 </html>
-
